<resources>
    <string name="app_name">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT?</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="assign_patient">Assign Patient</string>
    <string name="please_enter_the_email_address_that_you_used_to_register_and_we_will_send_you_an_email_with_a_link_to_reset_your_password">Please enter the email address that you used to register, and we will send you an email with a link to reset your password.</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="done_resetting_go_back_to_sign_in">Done resetting? Go back to sign in!</string>
    <string name="q_now">Q-now</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="emergency_priority_access">Emergency / Priority Access</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="join_queue">Join Queue</string>
    <string name="menu">Menu</string>
    <string name="my_queues">My Queues</string>
    <string name="search_medical_centers">Search medical centers...</string>
    <string name="active_queues">Active Queues</string>
    <string name="nearby_and_recently_visited_centers">Nearby and Recently Visited Centers</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_to_q_now_your_one_stop_queueing_and_appointment_assistant">Welcome to Q-Now! Your one stop queueing and appointment assistant.</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="priority_status">Priority Status (If any):</string>
    <string name="pwd">PWD</string>
    <string name="elderly">Elderly</string>
    <string name="severe_health_condition">Severe Health Condition</string>
    <string name="email_address">Email Address</string>
    <string name="save_information">Save Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="by_tapping_save_information_you_are_consenting_to_the_use_of_this_information_for_the_application_s_functionality">By tapping save information, you are consenting to the use of this information for the application\'s functionality.</string>
    <string name="contact_number">Contact Number</string>
    <string name="none">None</string>
    <string name="patient_information">Patient Information</string>
    <string name="update_patient_information">Update Patient Information</string>
    <string name="recently_visited_centers">Recently Visited Centers</string>
    <string name="search_establishments_or_queues">Search establishments or queues</string>
    <string name="search">Search</string>
    <string name="available_queues">Available Queues</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="establishment_counter">Establishment - Counter</string>
    <string name="my_requests">My Requests</string>
    <string name="awaiting_arrival">Awaiting Arrival</string>
</resources>