<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="95dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/shadowkinemerut"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColorHint="#3E2723" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/shadowkinemerut"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="#3E2723" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/shadowkinemerut"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="#3E2723" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:background="@drawable/shadowkinemerut"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#3E2723" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_700"
            android:text="@string/create_a_new_account"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/alreadyhaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#5C6BC0"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
