<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/border"
        android:elevation="4dp">

        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/shadowkineme"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/shadowkineme"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="#2196F3"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="@color/primary_700"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="#2196F3"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:backgroundTint="@color/primary_700"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
