<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resetpass">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="143dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/reset_password"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shadowkineme"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColorHint="#3E2723" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/please_enter_the_email_address_that_you_used_to_register_and_we_will_send_you_an_email_with_a_link_to_reset_your_password"
            android:textColor="#5C6BC0"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_700"
            android:text="@string/send_email"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/backtoSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/done_resetting_go_back_to_sign_in"
            android:textColor="#5C6BC0"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
